# HandFlow

./: .gitignore  Cargo.toml  README.md
.github/workflow/: release.yaml
src/: main.rs
src/handlers/: generate.rs  home.rs  mod.rs  upload.rs
src/html/: generate_tmpl.html  html_tmpl.html  main_tmpl.html  upload_tmpl.html
src/templates/: html.rs  mod.rs  parser.rs
src/utils/: file.rs  logging.rs  mod.rs  scales.rs  svg.rs
static/: site.webmanifest  style.css
static/scripts/: control.js  main.js
