[package]
name = "handflow"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = "0.36"
rand = "0.8.5"
lazy_static = "1.4"
htmlescape = "0.3.1"
once_cell = "1.19.0"
zip = "0.6"
tempfile = "3.3"
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.4"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }